# picdb

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
cmake/: AddCxxFlag.cmake  CompilerWarnings.cmake  EnableWarnings.cmake  ProhibitInSourceBuild.cmake  SetCxxStandard.cmake  SetupBoost.cmake  SetupConan.cmake  SetupNinjaColors.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt  Temp.cpp
